src/horseir/v2/tests/fail/t2.hir
// 2 : month - wrong year
// syntax error

module datetime {
    def date(){
        x0:m = 20190-00:m; // wrong year
    }
}
